[gd_scene load_steps=2 format=3 uid="uid://baabc"]

[ext_resource type="Script" path="res://ui/pause_menu.gd" id="1"]

[node name="PauseMenu" type="CanvasLayer"]
visible = false
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.5)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
text = "PAUSED"
modulate = Color(1, 1, 1, 1)

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
text = "Resume"
custom_minimum_size = Vector2(200, 50)

[node name="SaveButton" type="Button" parent="VBoxContainer"]
text = "Save Game"
custom_minimum_size = Vector2(200, 50)

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
text = "Settings"
custom_minimum_size = Vector2(200, 50)

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
text = "Main Menu"
custom_minimum_size = Vector2(200, 50)
